--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,35 +10,62 @@
 </ion-header>
 
 <ion-content>
-    <ion-card class="welcome-card">
-      <ion-img src="/assets/shapes.svg"></ion-img>
-      <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
-      </ion-card-content>
-    </ion-card>
-    <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
+  <ion-card class="welcome-card">
+    <ion-img src="/assets/RtoE.png" class="welcome-card-image" (click)="convertype()" *ngIf="!typeConversion"></ion-img>
+    <ion-img src="/assets/EtoR.png" class="welcome-card-image" (click)="convertype()" *ngIf="typeConversion"></ion-img>
+
+    <ion-card-header>
+      <ion-card-subtitle>Calculator </ion-card-subtitle>
+      <ion-card-title *ngIf="!typeConversion">Rupias to Euros</ion-card-title>
+      <ion-card-title *ngIf="typeConversion">Euros to Rupias</ion-card-title>
+
+    </ion-card-header>
+  </ion-card>
+
+
+  <div *ngIf="typeConversion">
+    <ion-item>
+      <ion-label position="stacked">Euro</ion-label>
+      <ion-input  [(ngModel)]="Euro" type="number" (change)="calculateCurrencyOne()" (keyup)="calculateCurrencyOne()"></ion-input>
+    </ion-item>
+    <ion-item>
+      Euro to Rupia
+    </ion-item>
+    <ion-item>
+      <b> {{RupiaResult | currency:'INR'}} </b>
+    </ion-item>
+  </div>
+
+  <div *ngIf="!typeConversion">
+
+    <!-- <ion-button (click)="lakhtypec()">lakh</ion-button>
+    <ion-button (click)="lakhtypec()">Rupia</ion-button> -->
+
+    <div *ngIf="Laks">
+      <ion-item>
+        <ion-label position="stacked" >Rupia</ion-label>
+        <ion-input [(ngModel)]="Rupia"  type="number"  (change)="calculateCurrencyTwo()" (keyup)="calculateCurrencyTwo()"></ion-input>
       </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
+      <ion-item>
+        Rupia to Euro
       </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
+      <ion-item>
+        <b> {{EuroResult | currency:'EUR'}}</b>
       </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
+    </div>
+
+    <div *ngIf="!Laks">
+      <ion-item>
+        <ion-label position="stacked" >Rupia</ion-label>
+        <ion-input [(ngModel)]="Rupia" type="number"  (change)="calculateCurrencyTwo()" (keyup)="calculateCurrencyTwo()"></ion-input>
       </ion-item>
-    </ion-list>
+      <ion-item>
+        Rupia to Euro
+      </ion-item>
+      <ion-item>
+        <b> {{EuroResult | currency:'EUR'}} </b>
+      </ion-item>
+    </div>
+  </div>
+
 </ion-content>
