--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,4 +1,10 @@
 .welcome-card ion-img {
   max-height: 35vh;
   overflow: hidden;
+
+}
+.welcome-card-image{
+  width: 50%;
+  float: none;
+  margin: auto;
 }
